# Micro-Services_FT_Project_v2.0

./: .env.example  .gitignore  API_DOCS.md  API_DOCUMENTATION.md  DEPLOYMENT.md  MIGRATION_NOTICE.md  README.md  REDIS_STREAMS_INFRASTRUCTURE.md  RESTORATION_PLAN.md  STRATEGY_MANAGEMENT_TEST_REPORT.md  dashboard_access.html  dashboard_http_testing_results.json  dashboard_links.html  dashboard_testing_results.json  demo_bulk_emergency.py  docker-compose.yml  generate_final_report.py  init_db.py  open_all_dashboards.sh  open_dashboards.py  pyproject.toml  pytest.ini  redis_streams_analysis_report.md  requirements-dev.txt  requirements.txt  simple_vue_test.html  start_services.sh  stop_services.sh  strategy_ui_test_results.json  test_all_dashboards.py  test_api.html  test_dashboards_http.py  test_production_scenario.py  test_production_simple.py  test_redis_celery_communication.py  test_redis_namespacing.py  test_redis_streams_communication.py  test_redis_streams_phase1_week2.py  test_redis_streams_phase1_week3.py  test_redis_streams_phase1_week4.py  (+7 more)
alembic/: README.md  env.py
backtesting_server/: __init__.py  config.py  main.py
dashboard-ui/: README.md  package-lock.json  package.json  vite.config.js
docs/: API_DOCUMENTATION.md  FUTURE_WORK_PLAN.md  index.md
freqai_server/: __init__.py  main.py
freqtrade-ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
management_server/: Dockerfile  README.md  main.py
monitoring/: prometheus.yml
scripts/: README.md  backup_db.sh  create_dummy_model.py  (+4 more)
(+207 files in other folders)
